fix: what we do items spacing

--- a/styles/components/_panel-cards.scss
+++ b/styles/components/_panel-cards.scss
@@ -4,7 +4,7 @@
   user-select: none;
   position: relative;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 40px;
   height: 100%;
   justify-content: space-between;
   &:not(:last-child) {
@@ -59,6 +59,14 @@
       padding-top: 1rem;
       opacity: 1;
       max-height: 1000px;
+    }
+
+    .button {
+      margin-top: 80px;
+      span {
+        max-width: 245px;
+        display: inline-block;
+      }
     }
   }
   &::before {
