--- a/styles/components/_static-cards-stack.scss
+++ b/styles/components/_static-cards-stack.scss
@@ -21,8 +21,7 @@
       .card-item-image {
         min-height: 400px;
         max-height: 400px;
-        padding: 10%;
-
+        margin-bottom: 40px;
         > div {
           max-width: unset !important;
           height: 100%;
